[package]
name = "opfs"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/anchpop/opfs.git"
license = "MIT"
authors = ["Andre Popovitch <andre@popovit.ch>"]
description = "A Rust implementation of the Origin Private File System browser API."

[dependencies]
futures = "0.3.31"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = { version = "0.4", features = [
    "futures-core-03-stream",
] }
js-sys = "0.3"
serde_json = "1.0"
web-sys = { version = "0.3.77", features = [
    "Storage",
    "Window",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemWritableFileStream",
    "FileSystemGetFileOptions",
    "FileSystemCreateWritableOptions",
    "Blob",
    "Navigator",
    "StorageManager",
    "FileSystemGetDirectoryOptions",
    "File",
] }
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.45.1", features = ["full"] }
dirs = "5.0"

[dev-dependencies]
tempfile = "3.20"
