[package]
name = "hydroperx-wwwfs"
version = "1.0.1"
edition = "2024"
repository = "https://github.com/anchpop/opfs.git"
license = "MIT"
authors = ["Andre Popovitch <andre@popovit.ch>"]
description = "Abstraction for the browser file system APIs."

[dependencies]
futures = "0.3.31"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = { version = "0.4", features = [
    "futures-core-03-stream",
] }
js-sys = "0.3"
web-sys = { version = "0.3.77", features = [
    "Storage",
    "Window",
    "FileSystemHandle",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemWritableFileStream",
    "FileSystemGetFileOptions",
    "FileSystemCreateWritableOptions",
    "Blob",
    "Navigator",
    "StorageManager",
    "FileSystemGetDirectoryOptions",
    "FileSystemRemoveOptions",
    "File",
    "FileList",
] }
serde = { version = "1.0", features = ["derive"] }